@@ -3,6 +3,7 @@ package hs.mediasystem.mediamanager;
 import hs.mediasystem.domain.stream.MediaType;
 import hs.mediasystem.domain.work.DataSource;
 import hs.mediasystem.domain.work.Reception;
+import hs.mediasystem.ext.basicmediatypes.domain.Classification;
 import hs.mediasystem.ext.basicmediatypes.domain.Details;
 import hs.mediasystem.ext.basicmediatypes.domain.Production;
 import hs.mediasystem.ext.basicmediatypes.domain.ProductionIdentifier;
@@ -10,6 +11,8 @@ import hs.mediasystem.util.ImageURI;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 public class Productions {
@@ -19,8 +22,13 @@ public class Productions {
       new ProductionIdentifier(DataSource.instance(MediaType.MOVIE, "TMDB"), "12345"),
       new Details("The Terminator", "Subtitle", "Robot kills humans", LocalDate.of(1984, 6, 6), new ImageURI("http://localhost", "key"), new ImageURI("http://localhost", "key")),
       new Reception(8, 12345),
-      Arrays.asList("en"),
-      Arrays.asList("Action", "Science-Fiction"),
+      new Classification(
+        Arrays.asList("Action", "Science-Fiction"),
+        Arrays.asList("en"),
+        List.of(),
+        Map.of(),
+        false
+      ),
       20.0,
       Set.of()
     );
